<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailUserActivity">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="84dp"
        android:layout_height="84dp"
        tools:src="@tools:sample/avatars"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/iv_avatar"
        app:layout_constraintStart_toStartOf="@+id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
        tools:text="@string/tv_username_detail"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/jockey_one_regular"
        android:textSize="24sp"
        android:letterSpacing="0.05"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_username"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        tools:text="@string/tv_name_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        android:fontFamily="@font/jockey_one_regular"
        android:textSize="16sp"
        android:letterSpacing="0.05"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/following_followers_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name">

        <TextView
            android:id="@+id/tv_follower_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/following_followers_layout"
            tools:text="@string/tv_followers_count_detail" />

        <TextView
            android:id="@+id/tv_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            app:layout_constraintStart_toEndOf="@id/tv_follower_count"
            app:layout_constraintTop_toTopOf="@id/following_followers_layout"
            tools:text="@string/followers" />

        <TextView
            android:id="@+id/tv_following_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/tv_follower"
            app:layout_constraintTop_toTopOf="@id/following_followers_layout"
            tools:text="@string/tv_followers_count_detail" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            app:layout_constraintStart_toEndOf="@id/tv_following_count"
            app:layout_constraintTop_toTopOf="@id/following_followers_layout"
            tools:text="@string/following" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tab_follower_following"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_follower_following"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:tabTextColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/following_followers_layout"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tab_follower_following"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_fav_null"
        android:backgroundTint="?attr/colorPrimary"/>

</androidx.constraintlayout.widget.ConstraintLayout>